--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+#__http/
+
+node_modules/
+playwright-report/
+test-results/
+artillery-report/
+coverage/
+
+# IDEA
+**/.idea/*
+**/*.iml
+**/*.iws
+
+# VSCode
+**/.vscode/*
+!**/.vscode/extensions.json
+!**/.vscode/settings.json
+!**/.vscode/tasks.json
+!**/.vscode/launch.json
+
 # Nestjs specific
 /dist
 /node_modules
